--- a/css/acuity.css
+++ b/css/acuity.css
@@ -126,7 +126,7 @@ a.acuity-embed-button:link {
 }
 
 .acuity-embed-button {
-	background: #3177ca;
+	background: #FF4500;
 	padding: 8px 12px;
 	border: 0;
 	-webkit-box-shadow: 0 -2px 0 rgba(0, 0, 0, .15) inset;
